--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <a href="https://github.com/Matsma22" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://www.linkedin.com/" target="_blank">
+        <a href="https://www.linkedin.com/in/matheus-arag%C3%A3o-569499365/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
         <a href="https://www.instagram.com/mats.ma/" target="_blank">
