--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br" class="">
   <head>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
